--- a/bcs-lock.html
+++ b/bcs-lock.html
@@ -56,6 +56,9 @@
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                    <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank">merch<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
+                                <path d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg></a></li>
                 </ul>
             </div>
         </div>
@@ -64,7 +67,7 @@
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-lock.jpg&quot;) center / cover no-repeat;border-style: none;filter: saturate(100%);">
             <div class="text">
                 <h1>BCS Lock</h1>
-                <h5>Early Access</h5>
+                <h5>Early Access</h5><a href="https://www.producthunt.com/posts/bcs-lock?utm_source=badge-review&utm_medium=badge&utm_souce=badge-bcs-lock#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=313901&theme=dark" alt="BCS Lock - A simple password generator for MacOS | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
