--- a/accounts.html
+++ b/accounts.html
@@ -72,24 +72,24 @@
                 <div class="btn-group" role="group"><a class="btn btn-primary" role="button" style="background: #3d566e;border-color: #3d566e;" href="https://cloud.borgcreative.com/survey/index.php/399895?newtest=Y&amp;lang=en" target="_blank">Create Account</a><a class="btn btn-primary" role="button" style="background: #3d566e;border-color: #3d566e;" href="https://cloud.borgcreative.com/survey/index.php/383428?newtest=Y&amp;lang=en" target="_blank">Delete my account</a></div>
             </div>
         </section>
-        <section class="clean-block about-us" style="padding: 0px 0px 0px;">
-            <!-- Start: Footer Basic -->
-            <footer class="footer-basic">
-                <!-- Start: Social Icons -->
-                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
-                <!-- Start: Links -->
-                <ul class="list-inline">
-                    <li class="list-inline-item"><a href="index.html">Home</a></li>
-                    <li class="list-inline-item"><a href="services.html">Services</a></li>
-                    <li class="list-inline-item"><a href="about.html">About</a></li>
-                    <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
-                    <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
-                </ul><!-- End: Links -->
-                <!-- Start: Copyright -->
-                <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
-            </footer><!-- End: Footer Basic -->
-        </section>
     </main>
+    <section class="clean-block about-us" style="padding: 0px 0px 0px;">
+        <!-- Start: Footer Basic -->
+        <footer class="footer-basic">
+            <!-- Start: Social Icons -->
+            <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+            <!-- Start: Links -->
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
+                <li class="list-inline-item"><a href="services.html">Services</a></li>
+                <li class="list-inline-item"><a href="about.html">About</a></li>
+                <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
+                <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
+            </ul><!-- End: Links -->
+            <!-- Start: Copyright -->
+            <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
+        </footer><!-- End: Footer Basic -->
+    </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
