--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="text-center">
                     <h2 style="color: rgb(255,255,255);">BCS Author</h2>
                     <p style="color: rgb(255,255,255);">A new, browser-based text editor.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img src="assets/img/bcsauthorpromo.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin-top: -40px;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img src="assets/img/bcsauthorpromo.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
