--- a/values.html
+++ b/values.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us</title>
+    <title>Our Values</title>
     <meta name="theme-color" content="#fff">
     <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta name="twitter:image" content="assets/img/Image%2031.jpg">
@@ -12,7 +12,7 @@
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
-    <meta name="description" content="">
+    <meta name="description" content="Our beliefs and faith drive us to respect everyone and provide great service.">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
