--- a/webdesign.html
+++ b/webdesign.html
@@ -135,7 +135,7 @@
                             <h3 class="name">BCS Social (Beta)</h3>
                             <p class="description">BCS Social is an advanced static site designed as a social broadcasting platform. The project is still in beta.</p><a href="https://www.bcssocial.net/" target="_blank">Check out the site</a>
                         </div>
-                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="https://dev.jacobborgprogramming.net/media/code.jpg">
+                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/desk.jpg">
                             <h3 class="name">Jacob Borg Programming</h3>
                             <p class="description">This is one of our team's oldest websites. Jacob Borg Programming is a project hosting website with several open-source projects.</p><a href="https://www.jacobborgprogramming.net/" target="_blank">Check out the site</a>
                         </div>
@@ -157,6 +157,7 @@
                                     <li>5 Static web pages</li>
                                     <li>$10 BCS marketing credit</li>
                                     <li>Contact form</li>
+                                    <li>$12 towards a Domain</li>
                                 </ul>
                             </div>
                         </div>
@@ -261,7 +262,7 @@
                         </ul>
                     </div><!-- End: Careers -->
                     <!-- Start: Social Icons -->
-                    <div class="col-lg-3 item social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-fireball"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a>
+                    <div class="col-lg-3 item social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-bonfire"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code-working"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a>
                         <p class="copyright">Borg Creative Studios, LLC © 2021</p>
                     </div><!-- End: Social Icons -->
                 </div>
